--- a/client/client-side/src/App.css
+++ b/client/client-side/src/App.css
@@ -16,6 +16,47 @@
 	color: #61dafb;
 }
 
+body{ 
+  margin:0; 
+  font:normal 75% Arial, Helvetica, sans-serif;
+  background-color: #888888; 
+} 
+
+h1{
+  font-family: 'Lucida Console';
+}
+
+canvas{ 
+  display: block; 
+} 
+
+
+.card{
+  border-radius: 1rem; 
+  border-color: white; 
+  background-color: rgba(0, 0, 0, 0.3); 
+  backdrop-filter: blur(16px);
+  height: 300px;
+  width: 300px;
+  padding-top: 50px;
+}
+
+#icon_available{
+  color: #019875;
+  text-align: center;
+  size: 100px;
+  font-display: 4px;
+
+}
+
+#icon_unavailable{
+  color: #E22030;
+  text-align: center;
+  size: 100px;
+  font-display: 4px;
+
+}
+
 @keyframes App-logo-spin {
 	from {
 		transform: rotate(0deg);
