--- a/client/client-side/src/App.css
+++ b/client/client-side/src/App.css
@@ -32,13 +32,20 @@ canvas{
 
 
 .card{
+  justify-content: center;
+  display: flex;
+  align-items: center;
   border-radius: 1rem; 
   border-color: white; 
-  background-color: rgba(0, 0, 0, 0.3); 
-  backdrop-filter: blur(16px);
+  background-color: gray; 
+  /* backdrop-filter: blur(16px); */
   height: 300px;
   width: 300px;
   padding-top: 50px;
+}
+
+#jumbotron{
+  background-color: #9E1B32;
 }
 
 #icon_available{
@@ -56,6 +63,44 @@ canvas{
   font-display: 4px;
 
 }
+
+img{
+  width: 80%;
+  height: auto;
+}
+
+
+
+/* .nav-pills{
+  width: 450px;
+  }
+  .nav-item{
+  width: 50%;
+  }
+  .nav-pills .nav-link{
+  font-weight: bold;
+  padding-top: 13px;
+  text-align: center;
+  background: #343436;
+  color: #fff;
+  border-radius: 30px;
+  height: 100px;
+  }
+  .nav-pills .nav-link.active{
+  background: #fff;
+  color: #000;
+  } */
+  .tab-content{
+  background: #9E1B32;
+  color: #000;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
+  }
+  /* .tab-content button{
+  border-radius: 15px;
+  width: 100px;
+  margin: 0 auto;
+  float: right;
+  } */
 
 @keyframes App-logo-spin {
 	from {
